# pluresdb

./: .gitignore  .native-memory-milestones.md  .npmrc  .prettierignore  .prettierrc.cjs  ATTRIBUTIONS.md  AUTOMATION_SUMMARY.md  CHANGELOG.md  CODEBASE_ASSESSMENT_V2.md  COMMIT_MSG.txt  CONTRIBUTING.md  CRATES_COMPLETE.md  Cargo.toml  Dockerfile  EPIC-RECOVERY-STATE.md  IMPLEMENTATION_STARTED.md  LICENSE  LOCAL_FIRST_COMPLETION.md  LOCAL_FIRST_ROADMAP_COMPLETION.md  MIGRATION.md  MIGRATION_SUMMARY.md  NAPI_BUILD_SUMMARY.md  NATIVE-MEMORY-TASK.md  PROGRESS_SUMMARY.md  PUBLISHING_GUIDE.md  PUBLISH_NOW.md  PXLANG-M6-MILESTONES.md  PXLANG-M6-WORKER.md  Project-Overview.md  README.md  RELEASE_PROCESS.md  RELEASE_READY.md  RESTRUCTURE_SUMMARY.md  ROADMAP.md  SECRETS_CONFIGURATION.md  SECURITY.md  TRIGGER_RELEASE.md  UPGRADE_SUMMARY.md  ValidationChecklist.md  config.example.json  (+14 more)
.githooks/: README.md  commit-msg  post-commit  post-merge  pre-commit  pre-push
.github/: AZURE_RELAY_REGRESSION_TEST.md  copilot-instructions.md  dependabot.yml
azure/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md
crates/: COMPLETION_SUMMARY.md  CRATE_ORGANIZATION.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  PUBLISHING_GUIDE.md  README.md
crates/pluresdb/: Cargo.toml  PUBLISHING_NOTE.md  README.md
crates/pluresdb-chronos/: Cargo.toml
crates/pluresdb-chronos/src/: lib.rs
crates/pluresdb-cli/: Cargo.toml  README.md
crates/pluresdb-cli/src/: main.rs
crates/pluresdb-core/: Cargo.toml
crates/pluresdb-core/benches/: crdt_benchmarks.rs  sql_benchmarks.rs  sync_benchmarks.rs
crates/pluresdb-core/src/: lib.rs  plugin.rs
crates/pluresdb-core/src/procedures/: ai_procedures.rs  document.rs  mod.rs  training.rs
crates/pluresdb-core/tests/: integration.rs
crates/pluresdb-deno/: Cargo.toml  README.md  build.rs  mod.ts.example  test-deno.ts
crates/pluresdb-deno/src/: lib.rs
crates/pluresdb-ipc/: Cargo.toml  README.md
crates/pluresdb-ipc/src/: lib.rs
crates/pluresdb-node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pluresdb-node.linux-x64-gnu.node  qa-probe.mjs  test-node.js  test-s3-reactive-px.mjs  test.db-shm  test.db-wal  verify-e2e.mjs  verify-log-sample.txt
crates/pluresdb-node/__tests__/: constraints.smoke.mjs  subscribe.gate.mjs
crates/pluresdb-node/src/: headroom.rs  lib.rs
crates/pluresdb-procedures/: Cargo.toml
crates/pluresdb-procedures/src/: agens.rs  builder.rs  engine.rs  ir.rs  lib.rs  parser.rs  pred.rs  query.pest
crates/pluresdb-procedures/src/ops/: aggregate.rs  filter.rs  graph.rs  mod.rs  mutate.rs  project.rs  search.rs  sort.rs  transform.rs
crates/pluresdb-procedures/tests/: engine_tests.rs  graph_tests.rs  parser_tests.rs  roundtrip_tests.rs
crates/pluresdb-px/: Cargo.toml
crates/pluresdb-px/examples/: pipeline.px  run_px.rs
crates/pluresdb-px/src/: lib.rs
crates/pluresdb-px/src/db/: guidance.rs  mod.rs  procedures.rs  schema.rs  seed.rs  store.rs
crates/pluresdb-px/src/px/: async_executor.rs  builder.rs  compiler.rs  compose.rs  dataflow.rs  executor.rs  grammar.pest  lint.rs  mod.rs  resolver.rs  scenario_runner.rs  watcher.rs
crates/pluresdb-px/tests/: conformance.rs
crates/pluresdb-px/tests/conformance_corpus/: 01_import_fact_rule_constraint.px  02_entity_contract_trigger.px  03_dataflow_procedure_code_block.px  04_legacy_procedure_steps_and_runtime_actions.px  05_scenario_expectation.px  06_function_and_config.px  07_dataflow_plain_steps.px  08_procedure_composition.px
crates/pluresdb-px/tests/conformance_corpus/invalid/: 01_missing_colon_in_constraint.px  02_invalid_procedure_header.px  03_unknown_severity_value.px  04_entity_fields_shape_error.px
crates/pluresdb-sea/: Cargo.toml
crates/pluresdb-sea/src/: encrypt.rs  key.rs  lib.rs  sign.rs  work.rs
crates/pluresdb-storage/: Cargo.toml  README.md
crates/pluresdb-storage/src/: blob.rs  encryption.rs  lib.rs  rad.rs  replay.rs  wal.rs
crates/pluresdb-storage/src/bridge/: mod.rs  restorer.rs  snapshot.rs  wal_flusher.rs
crates/pluresdb-storage/tests/: agent_simulation_tests.rs  durability_tests.rs  encryption_at_rest_tests.rs
crates/pluresdb-sync/: Cargo.toml  README.md
crates/pluresdb-sync/src/: disabled.rs  git_replication.rs  gun_protocol.rs  gun_relay.rs  hyperswarm.rs  lib.rs  relay.rs  replication.rs  transport.rs
crates/pluresdb-sync/tests/: gun_wire_golden.rs  integration_test.rs  p2p_harness_test.rs
crates/pluresdb-wasm/: Cargo.toml  README.md
crates/pluresdb-wasm/src/: chronos.rs  indexeddb.rs  lib.rs  px.rs
crates/pluresdb-wire-gun/: Cargo.toml
crates/pluresdb-wire-gun/src/: lib.rs
crates/pluresdb-wire-gun/tests/: fixtures_roundtrip.rs
crates/pluresdb/src/: lib.rs
demo/: README.md  api-demo.js  benchmark-comparison.html  gun-comparison.html  (+5 more)
rusty-gun/rusty-gun-api/: Cargo.toml
rusty-gun/rusty-gun-api/src/: lib.rs  main.rs  server.rs  vector_api.rs  websocket.rs
rusty-gun/rusty-gun-api/src/static/: demo.html  index.html
rusty-gun/rusty-gun-benchmarks/: Cargo.toml  README.md  run_tests.sh
rusty-gun/rusty-gun-benchmarks/benches/: api_benchmarks.rs  crdt_benchmarks.rs  end_to_end_benchmarks.rs  network_benchmarks.rs  storage_benchmarks.rs  vector_search_benchmarks.rs
rusty-gun/rusty-gun-benchmarks/tests/: integration_tests.rs  test_config.rs
rusty-gun/rusty-gun-cli/: Cargo.toml
rusty-gun/rusty-gun-cli/src/: lib.rs  main.rs
rusty-gun/rusty-gun-cli/src/commands/: config.rs  graph.rs  mod.rs  network.rs  node.rs  server.rs  sql.rs  vector.rs  version.rs
rusty-gun/rusty-gun-core/: Cargo.toml
rusty-gun/rusty-gun-core/src/: conflict.rs  crdt.rs  crypto.rs  error.rs  graph.rs  lib.rs  node.rs  types.rs
rusty-gun/rusty-gun-network/: Cargo.toml
rusty-gun/rusty-gun-network/src/: config.rs  discovery.rs  encryption.rs  error.rs  lib.rs  libp2p_net.rs  quic.rs  sync.rs  traits.rs  webrtc.rs
rusty-gun/rusty-gun-storage/: Cargo.toml
rusty-gun/rusty-gun-storage/src/: embeddings.rs  error.rs  lib.rs  migration.rs  rocksdb.rs  sled.rs  sqlite.rs  traits.rs  vector.rs  vector_service.rs
(+531 files in other folders)
