[workspace]
resolver = "2"
members = [
    "pluresdb-core",
    "pluresdb-storage", 
    "pluresdb-network",
    "pluresdb-api",
    "pluresdb-cli",
    "pluresdb-web",
    "pluresdb-vscode",
    "pluresdb-benchmarks"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Plures Organization"]
license = "AGPL-3.0"
repository = "https://github.com/plures/pluresdb"
description = "P2P Graph Database with SQLite Compatibility - Local-first, offline-first database for modern applications"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
futures = "0.3"

# Networking
quinn = "0.10"
webrtc = "0.7"
libp2p = "0.53"
rcgen = "0.12"
rustls = "0.21"

# Storage
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
rocksdb = "0.21"

# Vector search
hnsw_rs = "0.1"

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
warp = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Web UI
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"

# VSCode extension
wasm-pack = "0.12"

# Testing
criterion = "0.5"
proptest = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto
ring = "0.17"
ed25519-dalek = "2.0"
aes-gcm = "0.10"

# Serialization
bincode = "1.3"
rmp-serde = "1.1"

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
arc-swap = "1.6"