[workspace]
members = [
    "crates/pluresdb",
    "crates/pluresdb-core",
    "crates/pluresdb-node",
    "crates/pluresdb-deno",
    "crates/pluresdb-storage",
    "crates/pluresdb-sync",
    "crates/pluresdb-cli",
    "crates/pluresdb-wasm",
    "crates/pluresdb-ipc",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
version = "1.9.4"
authors = ["Plures Organization"]
description = "P2P Graph Database with SQLite Compatibility - Local-first, offline-first database for modern applications"
repository = "https://github.com/plures/pluresdb"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
arc-swap = "1.6"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
criterion = "0.5"
dashmap = "5.5"
ed25519-dalek = "2.0"
futures = "0.3"
hnsw_rs = "0.1"
indicatif = "0.17"
leptos = { version = "0.6", features = ["csr"] }
libp2p = "0.53"
parking_lot = "0.12"
proptest = "1.0"
quinn = "0.11"
rand = "0.8"
rcgen = "0.12"
ring = "0.17"
rocksdb = "0.21"
rustls = "0.21"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
warp = "0.3"
wasm-bindgen = "0.2"
wasm-pack = "0.12"
web-sys = "0.3"