[package]
name = "pluresdb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for managing PluresDB nodes."
keywords = ["cli", "database", "pluresdb"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
pluresdb-core = { path = "../pluresdb-core" }
pluresdb-storage = { path = "../pluresdb-storage" }
pluresdb-sync = { path = "../pluresdb-sync" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
