[package]
name = "pluresdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core CRDTs, data structures, and query primitives for PluresDB."
keywords = ["database", "crdt", "local-first"]

[features]
## Enable automatic text-embedding support via fastembed (ONNX Runtime backend).
##
## When this feature is active the `FastEmbedder` type becomes available and
## `CrdtStore::put()` will automatically embed text content when an embedder
## has been attached via `CrdtStore::with_embedder()`.
embeddings = ["dep:fastembed"]

## Enable legacy SQLite compatibility layer.
##
## When this feature is active, the `Database`, `SqlValue`, `QueryResult`,
## `ExecutionResult`, `DatabasePath`, `DatabaseOptions`, and `DatabaseError`
## types are available.  The `rusqlite` C library is only compiled when this
## feature is enabled.
sqlite-compat = ["dep:rusqlite"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
fastembed = { version = "5.11.0", optional = true }
futures = { workspace = true }
hnsw_rs.workspace = true
parking_lot.workspace = true
pluresdb-storage = { path = "../pluresdb-storage" }
rusqlite = { version = "0.32", features = ["bundled", "chrono"], optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "crdt_benchmarks"
harness = false

[[bench]]
name = "sql_benchmarks"
harness = false

