[package]
name = "pluresdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core CRDTs, data structures, and query primitives for PluresDB."
keywords = ["database", "crdt", "local-first"]

[features]
default = ["native"]

## Native target support (threading, HNSW, async storage, embedding worker).
native = ["dep:hnsw_rs", "dep:futures", "pluresdb-storage/native"]

## Enable automatic text-embedding support via fastembed (ONNX Runtime backend).
embeddings = ["dep:fastembed", "native"]

## Enable legacy SQLite compatibility layer.
sqlite-compat = ["dep:rusqlite", "native"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
fastembed = { version = "5.13.0", optional = true }
futures = { workspace = true, optional = true }
hnsw_rs = { workspace = true, optional = true }
parking_lot.workspace = true
pluresdb-storage = { path = "../pluresdb-storage", default-features = false }
rusqlite = { version = "0.39", features = ["bundled", "chrono"], optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
tempfile = "3.27"

[[bench]]
name = "crdt_benchmarks"
harness = false

[[bench]]
name = "sql_benchmarks"
harness = false
