[package]
name = "pluresdb-deno"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deno bindings for PluresDB."
keywords = ["database", "deno", "bindings"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
deno_bindgen = "0.9.0-alpha"

[dependencies]
deno_bindgen = "0.9.0-alpha"
pluresdb-core = { path = "../pluresdb-core" }
pluresdb-sync = { path = "../pluresdb-sync" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
