[package]
name = "pluresdb-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for PluresDB."
keywords = ["database", "node", "bindings"]

[lib]
crate-type = ["cdylib"]

[features]
## Enable automatic text-embedding support (fastembed / ONNX Runtime backend).
embeddings = ["pluresdb-core/embeddings"]

[dependencies]
napi = { version = "2.16", features = ["napi6", "serde-json"] }
napi-derive = "2.16"
pluresdb-core = { path = "../pluresdb-core" }
pluresdb-sync = { path = "../pluresdb-sync" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
napi-build = "2.3"
