[package]
name = "pluresdb-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for PluresDB."
keywords = ["database", "node", "bindings"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["embeddings"]

## Enable automatic text-embedding support (fastembed / ONNX Runtime backend).
embeddings = ["pluresdb-core/embeddings"]

## Enable the legacy SQLite compatibility layer.
##
## When this feature is active, the `query()` and `exec()` N-API methods are
## available and the database accepts SQL via the bundled SQLite engine.
sqlite-compat = ["pluresdb-core/sqlite-compat"]

[dependencies]
napi = { version = "3.8", features = ["napi6", "serde-json"] }
napi-derive = "3"
pluresdb-core = { path = "../pluresdb-core" }
pluresdb-procedures = { path = "../pluresdb-procedures" }
pluresdb-storage = { path = "../pluresdb-storage" }
pluresdb-sync = { path = "../pluresdb-sync" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
napi-build = "2.3"
