[package]
name = "pluresdb-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for PluresDB."
keywords = ["database", "node", "bindings"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["embeddings"]

## Enable automatic text-embedding support (fastembed / ONNX Runtime backend).
embeddings = ["pluresdb-core/embeddings"]

## Enable the legacy SQLite compatibility layer.
##
## When this feature is active, the `query()` and `exec()` N-API methods are
## available and the database accepts SQL via the bundled SQLite engine.
sqlite-compat = ["pluresdb-core/sqlite-compat"]

[dependencies]
napi = { version = "3.9", features = ["napi6", "serde-json"] }
napi-derive = "3.5.5"
pluresdb-core = { path = "../pluresdb-core" }
pluresdb-procedures = { path = "../pluresdb-procedures" }
pluresdb-px = { path = "../pluresdb-px" }
pluresdb-storage = { path = "../pluresdb-storage" }
pluresdb-sync = { path = "../pluresdb-sync" }
# Reactive subscribe(cb)/unsubscribe (EPIC-MEMORY, Effort 2). tokio is already a
# workspace dep (pluresdb-sync uses broadcast); we only need the broadcast
# receiver + its blocking_recv from a std::thread, so no napi/tokio_rt runtime
# is introduced (avoids nesting a second Tokio runtime inside Node).
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

# Headroom token-compression port (EPIC-MEMORY-SUPERIORITY, child H).
# Same crates pares-agens uses for the real algorithm — neither is pares-agens
# itself, so the forbidden plugin→agens dependency edge stays intact.
tiktoken-rs = "0.12"
unicode-segmentation = "1"

[build-dependencies]
napi-build = "2.3"
