[package]
name = "pluresdb-procedures"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-language query DSL, procedure engine, and core operations for PluresDB."
keywords = ["database", "query", "dsl", "crdt"]

[dependencies]
pluresdb-core = { path = "../pluresdb-core", default-features = false }
pluresdb-procedures-macros = { path = "../pluresdb-procedures-macros" }
anyhow.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
pest = "2.8"
pest_derive = "2.8"

[dev-dependencies]
