[package]
name = "pluresdb-px"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The .px declarative language runtime for PluresDB — parser, compiler, executor, and reactive procedure engine."
keywords = ["database", "declarative", "dsl", "reactive", "praxis"]

[features]
default = ["watcher", "async"]
watcher = ["notify", "walkdir"]
async = ["tokio", "futures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait = "0.1"
tokio = { workspace = true, features = ["time", "rt"], optional = true }
tracing = "0.1"

# praxis-lang — the single-source-of-truth .px language engine (M6: stop duplicating it).
# Pinned to git rev bbc306c on plures/praxis-lang. pluresdb-px imports parse+AST+eval
# from here and keeps ONLY its unique record-lowering/executor/store runtime.
px-ast = { git = "https://github.com/plures/praxis-lang.git", rev = "bbc306ca4377cb437e7366d07dabb50392a0e659", package = "px-ast" }
px-compiler = { git = "https://github.com/plures/praxis-lang.git", rev = "bbc306ca4377cb437e7366d07dabb50392a0e659", package = "px-compiler" }
px-eval = { git = "https://github.com/plures/praxis-lang.git", rev = "bbc306ca4377cb437e7366d07dabb50392a0e659", package = "px-eval" }
futures = { version = "0.3", optional = true }
regex = "1"

# Optional (watcher feature)
notify = { version = "8", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "time"] }
serde_json.workspace = true
