[package]
name = "pluresdb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage abstraction layer for PluresDB, including in-memory and sled-backed implementations."
keywords = ["database", "storage", "local-first"]

[features]
default = ["native"]
native = ["dep:sled", "dep:tokio", "dep:async-trait", "dep:aes-gcm", "dep:argon2", "dep:sha2", "dep:crc32fast", "dep:rand"]

[dependencies]
aes-gcm = { workspace = true, optional = true }
anyhow.workspace = true
argon2 = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
base64.workspace = true
chrono.workspace = true
crc32fast = { version = "1.5", optional = true }
parking_lot.workspace = true
rand = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
sled = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.27"
chrono.workspace = true
