[package]
name = "pluresdb-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync orchestration primitives for PluresDB peers."
keywords = ["sync", "p2p", "local-first"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake2 = "0.10"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
