[package]
name = "pluresdb-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync orchestration primitives for PluresDB peers."
keywords = ["sync", "p2p", "local-first"]

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
blake2 = "0.10"
dashmap.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.29"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
hex = "0.4"
pluresdb-core = { path = "../pluresdb-core" }
