[package]
name = "pluresdb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WebAssembly bindings for PluresDB - local-first P2P graph database"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pluresdb-core = { path = "../pluresdb-core" }
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

# For IndexedDB integration
web-sys = { workspace = true, features = [
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
