[package]
name = "pluresdb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WebAssembly bindings for PluresDB"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pluresdb-core = { path = "../pluresdb-core", default-features = false }
pluresdb-storage = { path = "../pluresdb-storage", default-features = false }
pluresdb-procedures = { path = "../pluresdb-procedures", default-features = false }
chrono = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# Intentionally enabled so transitive `getrandom` users (for example `uuid`)
# use the JS-backed RNG on `wasm32-unknown-unknown`.
getrandom = { version = "0.2", features = ["js"] }
web-sys = { workspace = true, features = [
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "Event",
    "DomException",
    "DomStringList",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
