[package]
name = "pluresdb-wire-gun"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUN-compatible wire message envelopes (get/put/ack) for PluresDB"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
