[package]
name = "pluresdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "P2P Graph Database with SQLite Compatibility - Local-first, offline-first database for modern applications"
keywords = ["database", "crdt", "local-first", "p2p", "sqlite"]
readme = "README.md"

[dependencies]
# Use explicit version - Cargo resolves from crates.io when publishing
# For local development, workspace members are used via path resolution
pluresdb-core = "1.5.2"
pluresdb-storage = "1.5.2"
pluresdb-sync = "1.5.2"

[dependencies.tokio]
workspace = true
optional = true

[features]
default = ["tokio"]
async = ["tokio"]

