[package]
name = "pluresdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "P2P Graph Database with SQLite Compatibility - Local-first, offline-first database for modern applications"
keywords = ["database", "crdt", "local-first", "p2p", "sqlite"]
readme = "README.md"

[dependencies]
# Use path dependencies for local development
pluresdb-core = { path = "../pluresdb-core" }
pluresdb-storage = { path = "../pluresdb-storage" }
pluresdb-sync = { path = "../pluresdb-sync" }
anyhow = { workspace = true }

[dependencies.tokio]
workspace = true
optional = true

[features]
default = ["tokio"]
async = ["tokio"]
## Forward the embeddings feature to pluresdb-core.
embeddings = ["pluresdb-core/embeddings"]
