[package]
name = "rusty-gun-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "crdt_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "vector_search_benchmarks"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "api_benchmarks"
harness = false

[[bench]]
name = "end_to_end_benchmarks"
harness = false

[dependencies]
# Core dependencies
rusty-gun-core = { path = "../rusty-gun-core" }
rusty-gun-storage = { path = "../rusty-gun-storage" }
rusty-gun-network = { path = "../rusty-gun-network" }
rusty-gun-api = { path = "../rusty-gun-api" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"

# Testing utilities
proptest = "1.0"
tempfile = "3.8"
rand = "0.8"
rand_chacha = "0.3"

# HTTP client for API testing
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

# Database testing
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Vector search testing
hnsw_rs = "0.1"

# Network testing
quinn = "0.10"
webrtc = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"