[package]
name = "rusty-gun-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "rusty-gun"
path = "src/main.rs"

[dependencies]
# Core dependencies
rusty-gun-core = { path = "../rusty-gun-core" }
rusty-gun-storage = { path = "../rusty-gun-storage", features = ["embeddings"] }
rusty-gun-network = { path = "../rusty-gun-network" }
rusty-gun-api = { path = "../rusty-gun-api" }

# CLI framework
clap = { workspace = true, features = ["derive"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = "1.0"

# Utilities
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
